--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </script>
       <script id="template-author-cloud-link" type="text/x-handlebars-template">
         {{#each authors}}
-        <li><a href="#author-{{ id }}" class="{{ className }}">{{ title }}</a></li>
+        <li><a href="#author-{{ authorName }}" class="{{ className }}">{{ authorName }}</a>  ({{ count }})</li>
         {{/each}}
       </script>
 
